--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">NoteMe</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search">search ...</string>
+    <string name="all_notes">All Notes</string>
+    <string name="note_title">Note title</string>
+    <string name="add">Add</string>
+    <string name="title">Title</string>
+    <string name="note">Note</string>
 </resources>
